# Sudoku_duba_glier

sudoku/: CMakeLists.txt
sudoku/CMakeProject9/: CMakeLists.txt  CMakeProject9.cpp  CMakeProject9.h
